--- a/example.ipynb
+++ b/example.ipynb
@@ -16,10 +16,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of jobs: 12\n",
-      "Processing times: [11, 5, 6, 7, 5, 7, 12, 18, 11, 17, 14, 9]\n",
-      "Due dates: [9, 15, 78, 33, 42, 24, 8, 25, 12, 10, 34, 62]\n",
-      "Tardy Cost: [10, 5, 3, 5, 2, 7, 7, 5, 10, 8, 3, 4]\n"
+      "Number of jobs: 13\n",
+      "Processing times: [10, 11, 14, 11, 12, 10, 10, 12, 10, 14, 13, 14, 14]\n",
+      "Due dates: [24, 22, 37, 20, 37, 31, 35, 27, 28, 39, 39, 29, 22]\n",
+      "Tardy Cost: [15, 18, 18, 12, 20, 11, 7, 11, 21, 12, 7, 22, 7]\n"
      ]
     }
    ],
@@ -45,10 +45,10 @@
    "source": [
     "# pick one\n",
     "\n",
-    "#from smsp_bi.bi.pulp import BI\n",
-    "#from smsp_bi.bi.pulp import BI_slim as BI\n",
-    "#from smsp_bi.bi.gurobi import BI\n",
-    "from smsp_bi.bi.gurobi import BI_slim as BI\n"
+    "#from smsp_bi.bi.pulp import BI_2\n",
+    "#from smsp_bi.bi.pulp import BI_2_slim as BI\n",
+    "#from smsp_bi.bi.gurobi import BI_2\n",
+    "from smsp_bi.bi.gurobi import BI_2_slim as BI\n"
    ]
   },
   {
@@ -63,52 +63,50 @@
       "Set parameter Username\n",
       "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
       "Thread count: 6 physical cores, 12 logical processors, using up to 12 threads\n",
-      "Optimize a model with 1485 rows, 1417 columns and 6957 nonzeros\n",
-      "Model fingerprint: 0xc5407200\n",
-      "Variable types: 905 continuous, 512 integer (512 binary)\n",
+      "Optimize a model with 990 rows, 936 columns and 4064 nonzeros\n",
+      "Model fingerprint: 0x25033d12\n",
+      "Variable types: 606 continuous, 330 integer (330 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+02]\n",
-      "  Objective range  [1e+01, 5e+01]\n",
+      "  Objective range  [7e+01, 2e+02]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [1e+00, 5e+00]\n",
-      "Presolve removed 623 rows and 502 columns\n",
-      "Presolve time: 0.07s\n",
-      "Presolved: 862 rows, 915 columns, 5132 nonzeros\n",
-      "Variable types: 403 continuous, 512 integer (512 binary)\n",
+      "  RHS range        [1e+00, 1e+01]\n",
+      "Presolve removed 335 rows and 298 columns\n",
+      "Presolve time: 0.03s\n",
+      "Presolved: 655 rows, 638 columns, 3065 nonzeros\n",
+      "Variable types: 308 continuous, 330 integer (330 binary)\n",
+      "Found heuristic solution: objective 9885.0000000\n",
       "\n",
-      "Root relaxation: objective 1.295674e+03, 504 iterations, 0.03 seconds (0.01 work units)\n",
+      "Root relaxation: objective 5.205208e+03, 293 iterations, 0.01 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0 1295.67360    0   23          - 1295.67360      -     -    0s\n",
-      "H    0     0                    1504.0000000 1295.67360  13.9%     -    0s\n",
-      "H    0     0                    1317.0000000 1295.67360  1.62%     -    0s\n",
-      "     0     0 1299.08785    0   34 1317.00000 1299.08785  1.36%     -    0s\n",
-      "     0     0 1299.08785    0   27 1317.00000 1299.08785  1.36%     -    0s\n",
-      "H    0     0                    1310.0000000 1299.08785  0.83%     -    0s\n",
-      "     0     0 1302.01659    0   29 1310.00000 1302.01659  0.61%     -    0s\n",
-      "H    0     0                    1304.0000000 1302.01659  0.15%     -    0s\n",
-      "     0     0 1302.10931    0   29 1304.00000 1302.10931  0.14%     -    0s\n",
-      "     0     0 1303.25000    0    4 1304.00000 1303.25000  0.06%     -    0s\n",
+      "     0     0 5205.20800    0   19 9885.00000 5205.20800  47.3%     -    0s\n",
+      "H    0     0                    5991.0000000 5205.20800  13.1%     -    0s\n",
+      "H    0     0                    5268.0000000 5233.43733  0.66%     -    0s\n",
+      "     0     0 5234.03347    0   42 5268.00000 5234.03347  0.64%     -    0s\n",
+      "     0     0 5253.95409    0   29 5268.00000 5253.95409  0.27%     -    0s\n",
+      "     0     0 5253.95409    0   19 5268.00000 5253.95409  0.27%     -    0s\n",
+      "     0     0 5267.12500    0    6 5268.00000 5267.12500  0.02%     -    0s\n",
       "\n",
       "Cutting planes:\n",
-      "  Gomory: 4\n",
-      "  Cover: 3\n",
+      "  Gomory: 7\n",
+      "  Cover: 2\n",
       "  Implied bound: 1\n",
       "  Clique: 1\n",
-      "  MIR: 5\n",
-      "  Flow cover: 5\n",
-      "  GUB cover: 1\n",
-      "  RLT: 5\n",
+      "  MIR: 3\n",
+      "  Flow cover: 3\n",
+      "  RLT: 9\n",
+      "  Relax-and-lift: 3\n",
       "\n",
-      "Explored 1 nodes (927 simplex iterations) in 0.48 seconds (0.07 work units)\n",
+      "Explored 1 nodes (703 simplex iterations) in 0.24 seconds (0.05 work units)\n",
       "Thread count was 12 (of 12 available processors)\n",
       "\n",
-      "Solution count 4: 1304 1310 1317 1504 \n",
+      "Solution count 3: 5268 5991 9885 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 1.304000000000e+03, best bound 1.304000000000e+03, gap 0.0000%\n"
+      "Best objective 5.268000000000e+03, best bound 5.268000000000e+03, gap 0.0000%\n"
      ]
     }
    ],
@@ -126,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Objective calculated from schedule: 1304\n"
+      "Objective calculated from schedule: 5268\n"
      ]
     }
    ],
@@ -166,34 +164,34 @@
      "text": [
       "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
       "Thread count: 6 physical cores, 12 logical processors, using up to 12 threads\n",
-      "Optimize a model with 134 rows, 1354 columns and 14900 nonzeros\n",
-      "Model fingerprint: 0xab25aefc\n",
-      "Variable types: 0 continuous, 1354 integer (1354 binary)\n",
+      "Optimize a model with 168 rows, 1873 columns and 24170 nonzeros\n",
+      "Model fingerprint: 0xfc6acce0\n",
+      "Variable types: 0 continuous, 1873 integer (1873 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+00]\n",
-      "  Objective range  [2e+00, 1e+03]\n",
+      "  Objective range  [7e+00, 2e+03]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 1e+00]\n",
-      "Presolve removed 9 rows and 61 columns\n",
-      "Presolve time: 0.09s\n",
-      "Presolved: 125 rows, 1293 columns, 14013 nonzeros\n",
-      "Variable types: 0 continuous, 1293 integer (1293 binary)\n",
-      "Found heuristic solution: objective 3273.0000000\n",
+      "Presolve removed 24 rows and 195 columns\n",
+      "Presolve time: 0.14s\n",
+      "Presolved: 144 rows, 1678 columns, 20506 nonzeros\n",
+      "Variable types: 0 continuous, 1678 integer (1678 binary)\n",
+      "Found heuristic solution: objective 9512.0000000\n",
       "\n",
-      "Root relaxation: objective 1.304000e+03, 408 iterations, 0.03 seconds (0.01 work units)\n",
+      "Root relaxation: objective 5.268000e+03, 626 iterations, 0.06 seconds (0.02 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "*    0     0               0    1304.0000000 1304.00000  0.00%     -    0s\n",
+      "*    0     0               0    5268.0000000 5268.00000  0.00%     -    0s\n",
       "\n",
-      "Explored 1 nodes (408 simplex iterations) in 0.20 seconds (0.06 work units)\n",
+      "Explored 1 nodes (626 simplex iterations) in 0.30 seconds (0.11 work units)\n",
       "Thread count was 12 (of 12 available processors)\n",
       "\n",
-      "Solution count 2: 1304 3273 \n",
+      "Solution count 2: 5268 9512 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 1.304000000000e+03, best bound 1.304000000000e+03, gap 0.0000%\n"
+      "Best objective 5.268000000000e+03, best bound 5.268000000000e+03, gap 0.0000%\n"
      ]
     }
    ],
@@ -211,7 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Objective calculated from schedule: 1304\n"
+      "Objective calculated from schedule: 5268\n"
      ]
     }
    ],
